@@ -1347,12 +1347,6 @@ AC_ARG_ENABLE(hibernate,
 AM_CONDITIONAL(ENABLE_HIBERNATE, [test x$enable_hibernate = xyes])
 
 # ------------------------------------------------------------------------------
-AC_ARG_ENABLE(ldconfig,
-       [AC_HELP_STRING([--disable-ldconfig], [disable ldconfig])],
-       enable_ldconfig=$enableval, enable_ldconfig=yes)
-AM_CONDITIONAL(ENABLE_LDCONFIG, [test x$enable_ldconfig = xyes])
-
-# ------------------------------------------------------------------------------
 # Location of the init scripts as mandated by LSB
 SYSTEM_SYSVINIT_PATH=/etc/init.d
 SYSTEM_SYSVRCND_PATH=/etc/rc.d
