@@ -1,21 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-[Unit]
-Description=Rebuild Dynamic Linker Cache
-Documentation=man:ldconfig(8)
-DefaultDependencies=no
-Conflicts=shutdown.target
-After=systemd-remount-fs.service
-Before=sysinit.target shutdown.target systemd-update-done.service
-ConditionNeedsUpdate=|/etc
-ConditionFileNotEmpty=|!/etc/ld.so.cache
-
-[Service]
-Type=oneshot
-RemainAfterExit=yes
-ExecStart=/sbin/ldconfig -X
